--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>MNNA port</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+  <body>
+    <header>
+      <div class="overlay">
+        <div class="border-image">
+          <img src="assets/img/marcel-porto-34.jpg" alt="" />
+        </div>
+        <h1>Moh. Nizar Nugraha Adi</h1>
+        <h2>Welcome to my portfolio website!</h2>
+      </div>
+    </header>
 
-<body>
-  Hello world
-  <script src="script.js"></script>
+    <div class="container">
+      <div class="about-me">
+        <img src="https://api.dicebear.com/7.x/adventurer/svg?seed=Angel" alt="Profile Picture" />
+        <div>
+          <h3>About Me</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae dui id elit tincidunt cursus. Suspendisse potenti.</p>
+        </div>
+      </div>
+      <div class="list-project">
+        <div class="project-1">Project 1</div>
+        <div class="project-2">Project 2</div>
+        <div class="project-3">Project 3</div>
+      </div>
+    </div>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
-</body>
-
+    <footer>
+      <p>&copy; 2023 MdwiastikaTech. All rights reserved.</p>
+      <p>
+        <a href="#">Home</a> | <a href="#">About</a> | <a href="#">Projects</a> |
+        <a href="#">Contact</a>
+      </p>
+    </footer>
+  </body>
 </html>
